<resources>
    <string name="app_name">AppProtfolio</string>
    <string name="action_settings">Settings</string>

    <string name="my_nano_degree">My Nanodegree Apps!</string>
    <string name="spotify_app">SPOTIFY STREAMER</string>
    <string name="library_app">Library App</string>
    <string name="scores_app">SCORES APP</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="my_own_app">CAPSTONE: My Own App</string>

</resources>
